# mpv-build-lite

./: CMakeLists.txt  README.md  appveyor-ubuntu.sh  appveyor.yml  build-deps.sh  build-gcc.sh  build-mpv.sh
.github/workflows/: llvm_clang.yml  main.yml  mpv_clang.yml  mpv_gcc.yml
cmake/: packages_check.cmake  toolchain_check.cmake
scripts/: update-repo.sh
toolchain/: CMakeLists.txt  binutils.cmake  gcc-base.cmake  gcc.cmake  gendef.cmake  mingw-w64-crt.cmake  mingw-w64-headers.cmake  mingw-w64.cmake  widl.cmake  winpthreads.cmake
toolchain/llvm/: llvm-ld.in
